--- a/view/home.html
+++ b/view/home.html
@@ -9,15 +9,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="RestFull Api Free For you">
+    <meta name="description" content="Rest-Api JustFerianss">
     <meta name="robots" content="archive, follow, imageindex, index, odp, snippet, translate">
     <meta name="author" content="">
-    <title>Alpis APIs</title>
+    <title>Just Ferianss APIs</title>
     <script src="https://kit.fontawesome.com/5367cb78eb.js" crossorigin="anonymous"></script>
-    <meta property="og:site_name" name="og:site_name" content="Alip - Rest API'S">
-    <meta property="og:title" name="og:title" content="Alip Rest Api">
-    <meta property="og:url" name="og:url" content="https://rest-api-alip.herokuapp.com/">
-    <meta property="og:description" name="og:description" content="ResFull API">
+    <meta property="og:site_name" name="og:site_name" content="JF - Rest API'S">
+    <meta property="og:title" name="og:title" content="JF Rest Api">
+    <meta property="og:url" name="og:url" content="https://api-justferianss.herokuapp.com/">
+    <meta property="og:description" name="og:description" content="RestFull API">
 <meta property="og:image" content="https://telegra.ph/file/278f19dd99ebc79c85140.png">
 <link rel="shortcut icon" href="https://telegra.ph/file/278f19dd99ebc79c85140.png"/>  
 <script src="sweetalert.min.js"></script>
