--- a/view/home.html
+++ b/view/home.html
@@ -43,7 +43,7 @@
     </div>
     <div class="bottom">
         <p>
-            <a href="https://www.tiktok.com/@alipje29" rel="noopener noreferrer" class="sosmed"><i class="fa-brands fa-tiktok"></i> Tiktok</a>
+            <a href="https://" rel="noopener noreferrer" class="sosmed"><i class="fa-brands fa-tiktok"></i> Tiktok</a>
         </p>
     </div>
 </body>
