--- a/view/docs.html
+++ b/view/docs.html
@@ -325,13 +325,13 @@
                 Contact
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/AlipBot">
+                <a class="nav-link" href="https://github.com/">
                     <i class="fab fa-fw fa-github">Github</i>
                     <span></span>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://instagram.com/m_aliff229">
+                <a class="nav-link" href="https://instagram.com/justferianss">
                     <i class="fab fa-fw fa-instagram">Instagram</i>
                     <span></span>
                 </a>
@@ -457,8 +457,8 @@
                         <div class="col-lg-12 text-center">
                             Contact Me
                             <p>
-                                <a href="https://github.com/AlipBot" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fab fa-fw fa-github"></i>&nbsp;Github</a>
-                                <a href="https://instagram.com/m_aliff229" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-instagram"></i>&nbsp;Instagram</a>
+                                <a href="https://github.com/" class="btn btn-primary btn-sm mr-2" target="_blank"><i class="fab fa-fw fa-github"></i>&nbsp;Github</a>
+                                <a href="https://instagram.com/justferianss" class="btn btn-primary btn-sm ml-2" target="_blank"><i class="fab fa-fw fa-instagram"></i>&nbsp;Instagram</a>
                             </p>
                         </div>
                     </div>
@@ -470,7 +470,7 @@
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
                         Made with <i class="fa fa-heart"></i> by
-                        <a href="https://github.com/AlipBot" target="_blank" style="color: rgb(255, 234, 0);">AlipBot🇲🇾</a>
+                        <a href="https://github.com/" target="_blank" style="color: rgb(255, 234, 0);">Just Ferianss</a>
                         </span>
                     </div>
                 </div>
