--- a/view/docs.html
+++ b/view/docs.html
@@ -350,7 +350,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <img src="images/icon.png" class="rounded-circle shadow-4"style="width: 50px;" alt="Avatar" />
-                                <span class="ml-2 d-none d-lg-inline small font-weight-bold">Alip</span>
+                                <span class="ml-2 d-none d-lg-inline small font-weight-bold">Just Ferianss</span>
                             </a>
                         </li>
                     </ul>
@@ -361,8 +361,8 @@
                         <div class="card-body">
                             <div class="row align-items-center">
                                 <div class="col mr-2">
-                                    <div class="text-md-left font-weight-bold mb-2 text-primary">Rest Api Alip </div>
-                                    <div class="text-sm-left mb-0 font-weight-bold">Hallo Selamat Datang Rest Api Alip Free
+                                    <div class="text-md-left font-weight-bold mb-2 text-primary">Just Ferianss</div>
+                                    <div class="text-sm-left mb-0 font-weight-bold">Welcome to my APIs
                                     </div>
                                 </div>
                                 <div class="col-auto">
